app/styles/app.css
body {
  font-family: 'Karla', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #031424;
  background-color: #EEFAFF; }

p {
  text-align: initial;
  margin: initial;
  padding-top: initial;
  padding-bottom: initial;
  border-bottom: initial;
  background: initial; }
  p.home {
    font-size: 16px; }

a {
  color: #0BD6B0; }
  a:hover {
    text-decoration: none;
    color: #031424; }
  a:focus {
    text-decoration: none;
    color: #031424; }

span {
  font-weight: 700; }

h1{
  margin-top: 90px;}

h3 {
  font-size: 20px;
  margin-top: 0;}
  h3.sub {
    font-size: 16px;
    line-height: 0;
    margin-top: 30px; }

h4 {
  font-size: 20px; }

.bajada{
  margin-bottom: 20px;
}

.page-header{
  border-bottom: 0;}

/*NAVBAR*/
.navbar-default {
  background-color: #031424;
  }

.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    border-color: #031424;
}
.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
    max-height: 540px;
}

.chart{
  margin-bottom: 20px;
}

/*SECTIONS*/
#resume {
  background-color: white; }

/*PANELS*/
.panel {
  border: 0;
  background-color: transparent;
  box-shadow: none; }

.panel-default > .panel-heading{
  background-color: #30425D;
  color: white;
  text-align: center;
  margin-bottom: 5px;
  border-radius: 0;
  padding: 16px 0 5px 0;
  border-color: transparent;
}

.panel.panel-default.legend {
  background-color: #031424;
  color: white;
  padding: 5px 15px 5px 15px;
  border-radius: 0;
  margin: 0 0 5px 0;
}

.panel-default .panel-body {
  padding: 0;
  border: 0; }
  .panel-default .panel-body .panel-heading {
    background-color: #031424;
    color: white;
    border-radius: 0;
    border: none;
    padding-bottom: 15px; }

.panel-promise {
  padding: 15px;
  background-color: white;
  border: 0;
  margin-bottom: 5px; }

.panel-body.compare{
  background-color: white;
}

.compare-box{
  padding: 25px 0 10px 0; }

/*DATA*/
.ct-series-b .ct-bar, .ct-series-b .ct-line, .ct-series-b .ct-point, .ct-series-b .ct-slice-donut {
  stroke: #2ABAFD; }

.ct-series-a .ct-bar, .ct-series-a .ct-line, .ct-series-a .ct-point, .ct-series-a .ct-slice-donut {
  stroke: #031424; }

.progress {
  height: 26px;
  border-radius: 15px;
  margin: 10px 0 20px 0; }

.progress-bar {
  background-color: #2ABAFD; }

.compare-bar{
  background-color: #EEFAFF;
  box-shadow: none;
}
.sr-only{
  position: relative;
  top: 3px;
}

.category-result {
  font-weight: 700;
  font-size: 30px; }

.promise-result {
  font-weight: 700;
  font-size: 30px; }
  .promise-result.home {
    line-height: 24px; }

.total-result {
  font-weight: 700;
  font-size: 50px; }
  .total-result.sub {
    font-size: 30px;
    margin-bottom: 30px; }
  .total-result.cumplimientos{
    margin-top: 20px; }

.compare-info{
  font-weight: 700;
  text-align: center; }

.compare-result{
  font-weight: 700;
  font-size: 30px;
}

/*HIGHLIGHT ELEMENTS*/
.badge {
  background-color: #0BD6B0; }

.label {
  background-color: #0BD6B0; }

.tooltip {
  width: 280px; }

.tooltip-inner {
  background-color: #2ABAFD; }

.tooltip.top .tooltip-arrow {
  border-top-color: #2ABAFD; }

.fa{
  margin: -16px 0 -7px 0;
}

/*BUTTONS*/
button.btn.btn-default {
  background-color: #0BD6B0;
  color: white;
  border: none;
  font-weight: 700;
  border-radius: 20px; }
  button.btn.btn-default:hover {
    background-color: #031424; }

button.btn.btn-default.btn-sm.btn-block.home {
  margin: auto;
  max-width: 70px;
  background-color: #FB7881; }
  button.btn.btn-default.btn-sm.btn-block.home:hover {
    background-color: #2ABAFD; }

button.btn.btn-default.btn-sm.dark {
  background-color: #031424; }
  button.btn.btn-default.btn-sm.dark:hover {
    background-color: #2ABAFD; }

.btn-default{
  background-color: #031424;
  color: white;
  border-radius: 20px;
  border: none; }
  .btn-default:hover{
    background-color: #0BD6B0;
    color: white;}
  .btn-default:focus{
    background-color: #0BD6B0;
    color: white;}

/*MODALS*/
.modal-content {
  border: 0;
  border-radius: 0;
  -webkit-box-shadow: none; }

.modal-header {
  border-bottom: none; }

.modal-footer{
  border: none;
}
.project-list{
  border-left: 4px solid #031424;
  padding: 5px 10px 5px 10px;
  margin-left: 18px;
}

/*TABLES*/
.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td{
  border-top: 1px solid #031424; }

.table > thead > tr > th{
  border-bottom: 2px solid #031424; }

.table-responsive{
  border: none; }


/*FOOTER*/
footer {
  background-color: #031424;
  color: white;
  padding: 50px 0 50px 0; }
  footer a {
    color: white; }

